fix iphone overflow

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -108,6 +108,7 @@ li a {
 	position: absolute;
 	width: 100%;
 	z-index: 300;
+	overflow-x: hidden;
 }
 
 #myVideo {
